Implements play until score is 5, adds play again option

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
   </head>
   <body>
     <div class="buttons">
-      <button class="btn-1 rock">Rock</button>
-      <button class="btn-2 paper">Paper</button>
-      <button class="btn-3 scissors">Scissors</button>
+      <button class="btn-game rock">Rock</button>
+      <button class="btn-game paper">Paper</button>
+      <button class="btn-game scissors">Scissors</button>
     </div>
     <div class="results">
       <div class="score-container">
@@ -22,7 +22,8 @@
           <p class="score-comp">Computer:</p>
         </div>
       </div>
-      <p class="winner"></p>
+      <p class="winner hidden"></p>
+      <button class="reset hidden">Play again?</button>
     </div>
     <p class="message"></p>
   </body>
